--- a/Css/illustration.css
+++ b/Css/illustration.css
@@ -24,6 +24,7 @@ ul {
     list-style: none;
     padding-left: 0;
     background-color: rgb(3, 69, 110);
+    z-index: 999;
 }
 
 #main_menu ul li a {
@@ -62,6 +63,7 @@ nav {
 
 div {
     padding: 0 10%;
+    display: inline-block;
 }
 
 img {
@@ -69,20 +71,84 @@ img {
     display: inline-block;
 }
 
-.image-flex {
-    display: flex;
-    flex-grow:0;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 50px 10%;
+* {
+    box-sizing: border-box;
 }
 
-.image-item {
-    width: 250px;
+/* force scrollbar */
+html {
+    overflow-y: scroll;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+    padding: 0 10%;
+    margin: 90px 0;
+    /* 添加一些内边距 */
+}
+
+/* 图片放大效果 */
+.grid-item {
+    width: 19%;
+    box-sizing: border-box;
+    padding: 0;
+}
+
+.grid-item img {
+    display: block;
+    cursor: pointer;
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    /* 可以将图像的最大宽度设置为100% */
+}
+
+.grid-item img:hover {
+    filter: brightness(1.3) contrast(150%) blur(1px);
+    transform: scale(1.01);
+    transition: all 0.1s ease-in;
+}
+
+
+/* 隐藏弹出窗口 */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100%;
     height: 100%;
-    transition: transform 0.3s ease-in-out;
+    background-color: rgba(0, 0, 0, 0.8);
+    overflow: auto;
+    backdrop-filter:blur(5px);
 }
 
-.image-item:hover {
-    transform: scale(1.2); /* 鼠标移入时放大 */
+/* 弹出窗口内的图片样式 */
+.modal-content {
+    display: block;
+    margin: auto;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+/* 关闭按钮样式 */
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
 }
