--- a/Css/index.css
+++ b/Css/index.css
@@ -57,7 +57,6 @@ nav{
 
 div{
     padding:0 10%;
-    margin: 90px 0;
 }
 
 img{
@@ -75,9 +74,18 @@ h4{
     border-radius: 25px;
 }
 
-.flex{
+.flex {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100%;
+    padding: 0;
+    margin: 0;
 }
+
+.flex video {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
